--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \input{preamble}
 
 % Add your bibtex library here
-\addbibresource{master-refs.bib}}
+\addbibresource{master-refs.bib}
 
 
 \begin{document}
