--- a/master-refs.bib
+++ b/master-refs.bib
@@ -114,10 +114,8 @@
 abstract = {We present a new open source, extensible and flexible software platform for Bayesian evolutionary analysis called BEAST 2. This software platform is a re-design of the popular BEAST 1 platform to correct structural deficiencies that became evident as the BEAST 1 software evolved. Key among those deficiencies was the lack of post-deployment extensibility. BEAST 2 now has a fully developed package management system that allows third party developers to write additional functionality that can be directly installed to the BEAST 2 analysis platform via a package manager without requiring a new software release of the platform. This package architecture is showcased with a number of recently published new models encompassing birth-death-sampling tree priors, phylodynamics and model averaging for substitution models and site partitioning. A second major improvement is the ability to read/write the entire state of the MCMC chain to/from disk allowing it to be easily shared between multiple instances of the BEAST software. This facilitates checkpointing and better support for multi-processor and high-end computing extensions. Finally, the functionality in new packages can be easily added to the user interface (BEAUti 2) by a simple XML template-based mechanism because BEAST 2 has been re-designed to provide greater integration between the analysis engine and the user interface so that, for example BEAST and BEAUti use exactly the same XML file format.},
 author = {Bouckaert, Remco and Heled, Joseph and K{\"{u}}hnert, Denise and Vaughan, Tim and Wu, Chieh-Hsi and Xie, Dong and Suchard, Marc A and Rambaut, Andrew and Drummond, Alexei J},
 doi = {10.1371/journal.pcbi.1003537},
-file = {:Users/nicmuell/Library/Application Support/Mendeley Desktop/Downloaded/Bouckaert et al. - 2014 - BEAST 2 a software platform for Bayesian evolutionary analysis.pdf:pdf},
 issn = {1553-7358},
 journal = {PLoS computational biology},
-mendeley-groups = {Methods,SkylineTutorial},
 month = {apr},
 number = {4},
 pages = {e1003537},
@@ -134,5 +132,18 @@ year = {2014}
   publisher = {Cambridge University Press},
   year = {2014},
   author = {Alexei J. Drummond and Remco R. Bouckaert}
+}
+
+@article {Wolfe2022,
+	author = {Wolfe, Joanna M. and Ballou, Lauren and Luque, Javier and Watson-Zink, Victoria M. and Ahyong, Shane T. and Barido-Sottani, Jo{\"e}lle and Chan, Tin-Yam and Chu, Ka Hou and Crandall, Keith A. and Daniels, Savel R. and Felder, Darryl L. and Mancke, Harrison and Martin, Joel W. and Ng, Peter K.L. and Ortega-Hern{\'a}ndez, Javier and Theil, Emma Palacios and Pentcheff, N. Dean and Robles, Rafael and Thoma, Brent P. and Tsang, Ling Ming and Wetzer, Regina and Windsor, Amanda M. and Bracken-Grissom, Heather D.},
+	title = {Convergent adaptation of true crabs (Decapoda: Brachyura) to a gradient of terrestrial environments},
+	elocation-id = {2022.12.09.519815},
+	year = {2022},
+	doi = {10.1101/2022.12.09.519815},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {For much of terrestrial biodiversity, the evolutionary pathways of adaptation from marine ancestors are poorly understood, and have usually been viewed as a binary trait. True crabs, the decapod crustacean infraorder Brachyura, comprise over 7,600 species representing a striking diversity of morphology and ecology, including repeated adaptation to non-marine habitats. Here, we reconstruct the evolutionary history of Brachyura using new and published sequences of 10 genes for 344 species spanning 88 of 104 families. Using 36 newly vetted fossil calibrations, we infer that brachyurans most likely diverged in the Triassic, with family-level splits in the late Cretaceous and early Paleogene. By contrast, the root age is underestimated with automated sampling of 328 fossil occurrences explicitly incorporated into the tree prior, suggesting such models are a poor fit under heterogeneous fossil preservation. We apply recently defined trait-by-environment associations to classify a gradient of transitions from marine to terrestrial lifestyles. We estimate that crabs left the marine environment at least five and up to 15 times convergently, and returned to the sea from non-marine environments three or four times. Although the most highly terrestrial- and many freshwater-adapted crabs are concentrated in Thoracotremata, Bayesian threshold models of ancestral state reconstruction fail to identify shifts to higher terrestrial grades due to the degree of underlying change required. Lineages throughout our tree inhabit intertidal and marginal marine environments, corroborating the inference that the early stages of terrestrial adaptation have a lower threshold to evolve. Our framework and newly compiled fossil and natural history datasets will enable future comparisons of non-marine adaptation at the morphological and molecular level. Crabs provide an important window into the early processes of adaptation to novel environments, and different degrees of evolutionary constraint that might help predict these pathways.Competing Interest StatementThe authors have declared no competing interest.},
+	URL = {https://www.biorxiv.org/content/early/2022/12/12/2022.12.09.519815},
+	eprint = {https://www.biorxiv.org/content/early/2022/12/12/2022.12.09.519815.full.pdf},
+	journal = {bioRxiv}
 }
 
